main/default/objects/Survey__c/fields/FeedBack__c.field-meta.xml
<CustomField>
    <fullName>FeedBack__c</fullName>
    <label>FeedBack</label>
    <length>150</length>
    <type>Text</type>
</CustomField>