main/default/objects/Survey__c/fields/Purchase_History__c.field-meta.xml
<CustomField>
    <fullName>Purchase_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase History</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Purchase_History__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Purchase_History__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>