main/default/objects/Survey__c/fields/SurveyDate__c.field-meta.xml
<CustomField>
    <fullName>SurveyDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>SurveyDate</label>
    <type>Date</type>
</CustomField>