main/default/objects/Survey__c/fields/SurveyType__c.field-meta.xml
<CustomField>
    <fullName>SurveyType__c</fullName>
    <label>SurveyType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Loyalty Program</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>