main/default/objects/Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Rating__c</columns>
    <columns>SurveyType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>