main/default/objects/Survey__c/listViews/Survey.listView-meta.xml
<ListView>
    <fullName>Survey</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Purchase_History__c</columns>
    <columns>SurveyType__c</columns>
    <columns>Rating__c</columns>
    <columns>SurveyDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Survey</label>
</ListView>